# monitor-meteorologico-ve

./: pyproject.toml
src/monitor_meteorologico_ve/: __init__.py  openmeteo.py
