[project]
name = "monitor_meteorologico_ve"
version = "0.1.1"
description = "Clientes de Datos Meteorológicos de Venezuela"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.uv]
python-paths = ["src"]